<resources>
    <string name="app_name">Agenda</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">LOGIN</string>
    <string name="Btn_Registro">REGISTRO</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Conraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta? Regístrate</string>

    <!--MENU PRINCIPAL-->
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Tareas</string>
    <string name="Archivados">Archivados</string>
    <string name="Categorias">Categorias</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <!--AGREGAR NOTA-->
    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_Usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro: </string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Título</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Fecha_de_entrega">Fecha de entrega:</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Btn_Hora">Hora</string>
    <string name="Hora">00:00</string>
    <string name="Estado">Pendiente</string>
    <string name="Btn_Contactos">Contacto</string>
    <string name="Contacto">00 0000 0000</string>

    <!--ARRAY SPINNER NOTIFICACION-->
    <string-array name="Opciones_Notificacion">
        <item>10 minutos antes</item>
        <item>1 día antes</item>
        <item>Sin recordatorio</item>
    </string-array>

    <!--ARRAY SPINNER CATEGORÍAS-->
    <string-array name="Opciones_Categoria">
        <item>Personal</item>
        <item>Trabajo</item>
        <item>Familia</item>
        <item>Otra</item>
    </string-array>

    <!--MENU-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Vaciar_Todas_Las_Notas">Vaciar todas las notas</string>
    <string name="Filtrar_Notas">Filtrar notas</string>

    <!--ITEM NOTA-->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid del usuario</string>
    <string name="Correo_Usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item">Título</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Notificacion_Item">Notificacion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Hora_Item">00:00</string>
    <string name="Categoria_Item">Categoría</string>
    <string name="Estado_Item_TXT">Estado: </string>
    <string name="Estado_Item">Pendiente</string>
    <string name="Contacto_Item">00 0000 0000</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Modificar</string>

    <!--CUADRO DE DIALOGO - FILTRAR NOTAS-->
    <string name="FiltroTXT">Filtrar notas: </string>
    <string name="Todas_notas">Todas</string>
    <string name="Notas_Realizadas">Realizadas</string>
    <string name="Notas_Pendientes">Pendientes</string>
    <string name="Notas_Aplazadas">Aplazadas</string>

    <!--ACTUALIZAR NOTA-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A">Uid del usuario</string>
    <string name="Correo_Usuario_A">Correo de usuario</string>
    <string name="Fecha_hora_actual_A">Fecha y hora de registro</string>
    <string name="Titulo_A">Título</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Btn_Hora_A">Hora</string>
    <string name="Hora_A">00:00</string>
    <string name="Estado_A">Pendiente</string>
    <string name="Btn_Contactos_A">Contacto</string>
    <string name="Contacto_A">00 0000 0000</string>
    <string name="Estado_nuevo"> -- </string>

    <!--SPINNER - ESTADO-->
    <string-array name="Estados_nota">
        <item>"Pendiente"</item>
        <item>"Aplazado"</item>
        <item>Realizado"</item>
    </string-array>

    <!--DETALLE NOTA-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Id_usuario_Detalle_TXT">Uid del usuario:</string>
    <string name="Id_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo del usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Titulo: </string>
    <string name="Titulo_Detalle">Titulo</string>
    <string name="Descripcion_Detalle_TXT">Descripcion: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Notificacion_Detalle_TXT">Notificacion: </string>
    <string name="Notificacion_Detalle">Notificacion</string>
    <string name="Fecha_Registro_Detalle_TXT">Fecha registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Realizacion_Detalle_TXT">Fecha de entrega: </string>
    <string name="Fecha_Realizacion_Detalle">Fecha de entrega</string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Hora_Nota_Detalle">Hora nota</string>
    <string name="Categoria_Detalle_TXT">Categoria: </string>
    <string name="Categoria_Detalle">Categoria</string>
    <string name="Estado_Detalle_TXT">Estado: </string>
    <string name="Estado_Detalle">Estado nota</string>
    <string name="Contacto_Detalle_TXT">Contacto: </string>
    <string name="Contacto_Detalle">00 0000 0000</string>
    <string name="Llamar">Llamar</string>
    <string name="Mensaje">Mensaje</string>

    <!--CATEGORIAS-->
    <string name="Categoria_Item_C">Categoria</string>
    <string name="Categoria_Dialogo_TXT">Categoría: </string>
    <string name="Categoria_Dialogo">Categoría</string>
    <string name="Guardar_Dialogo">Guardar</string>
    <string name="Nueva_Categoria_Dialogo">Categoria</string>

    <!--INFORMACIÓN DE APLICACION-->
    <string name="Desarrollador">Desarrollado por: </string>
    <string name="Desarrollador1">Mariana Berenice Hernández Castillo</string>
    <string name="Desarrollador2">Brenda Hernández Saucedo</string>
    <string name="Desarrollador3">Héctor Carrillo Estrada</string>
    <string name="CorreoSoporte">Soporte: agendamoviles65@gmail.com</string>
    <string name="Version">Version: 0.1</string>
    <string name="EntendidoInfo">Entendido</string>
</resources>