<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:lottie_imageAssetsFolder="assets"
        android:layout_gravity="center"
        app:lottie_fileName="filtro.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:textSize="20sp"
        android:fontFamily="@font/leaguespartanmedium"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/FiltroTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Todas_notas"
        android:text="@string/Todas_notas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Notas_Realizadas"
        android:text="@string/Notas_Realizadas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Notas_Pendientes"
        android:text="@string/Notas_Pendientes"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Notas_Aplazadas"
        android:text="@string/Notas_Aplazadas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>