<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNota.Actualizar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--UID DEL USUARIO-->
        <TextView
            android:id="@+id/Uid_Usuario_A"
            android:hint="@string/Uid_Usuario_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"/>

        <!--CORREO DEL USUARIO-->
        <TextView
            android:id="@+id/Correo_Usuario_A"
            android:hint="@string/Correo_Usuario_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"/>

        <!--FECHA Y HORA ACTUAL DEL DISPOSITIVO DE REGISTRO-->
        <TextView
            android:id="@+id/Fecha_hora_actual_A"
            android:hint="@string/Fecha_hora_actual_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"/>

        <!--TITULO-->
        <EditText
            android:id="@+id/Titulo_A"
            android:hint="@string/Titulo_A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--DESCRIPCION-->
        <EditText
            android:id="@+id/Descripcion_A"
            android:hint="@string/Descripcion_A"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--NOTIFICACION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO DE ALARMA-->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icono_notiicacion"/>

            <Spinner
                android:id="@+id/SpinnerNotificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--FECHA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--BOTON PARA ABRIR CALENDARIO-->
            <Button
                android:id="@+id/Btn_Calendario_A"
                android:text="@string/Btn_Calendario_A"
                app:icon="@drawable/icono_calendario"
                android:enabled="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <!--VISUALIZAR FECHA ELEGIDA-->
            <TextView
                android:id="@+id/Fecha_A"
                android:hint="@string/Fecha_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--HORA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--BOTON PARA ABRIR RELOJ-->
            <Button
                android:id="@+id/Btn_Hora_A"
                android:text="@string/Btn_Hora_A"
                app:icon="@drawable/icono_reloj"
                android:enabled="false"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <!--VISUALIZAR HORA ELEGIDA-->
            <TextView
                android:id="@+id/Hora_A"
                android:hint="@string/Hora_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CATEGORÍA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--ICONO DE ALARMA-->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icono_categoria"/>

            <Spinner
                android:id="@+id/SpinnerCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CONTACTO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--BOTON PARA ABRIR CONTACTOS-->
            <Button
                android:id="@+id/Btn_Contactos_A"
                android:text="@string/Btn_Contactos_A"
                app:icon="@drawable/icono_contacto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <!--VISUALIZAR CONTACTO-->
            <TextView
                android:id="@+id/Contacto_A"
                android:text="@string/Contacto_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--ESTADO DE LA NOTA-->
        <TextView
            android:id="@+id/Estado_A"
            android:text="@string/Estado_A"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>